# hledger-depreciate

./: .gitignore  README.md  default.nix  hledger-depreciate.cabal  hledger-depreciate.nix  release0.nix  release2.nix
src/: Config.hs  Depreciation.hs  Main.hs
