name: hledger-depreciate
version: 1.0.0
license: BSD3
license-file: LICENSE
cabal-version: >= 1.18
build-type: Simple

executable hledger-depreciate
    build-depends:
          base < 5
        , dhall
        , errors
        , hledger-lib
        , text
        , time
    hs-source-dirs: src
    main-is: Main.hs
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
    other-modules:
          Config
        , Depreciation
